--- a/ks-tic-tac-toe/package.json
+++ b/ks-tic-tac-toe/package.json
@@ -21,14 +21,15 @@
     "babel-preset-env": "^1.5.2",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-3": "^6.5.0",
-    "react-test-renderer": "^15.5.4",
     "chai": "^3.5.0",
     "enzyme": "^2.3.0",
+    "husky": "^0.13.4",
     "jsdom-global": "^2.1.0",
-    "nock": "^8.0.0",
+    "nock": "^9.0.14",
+    "react-test-renderer": "^15.5.4",
     "wix-bootstrap-testkit": "latest",
     "wix-config-emitter": "latest",
-    "husky": "^0.13.4",
+    "wix-eventually": "^1.0.327",
     "yoshi": "latest"
   },
   "dependencies": {
@@ -50,10 +51,28 @@
     "wix-run-mode": "latest"
   },
   "babel": {
-    "presets": ["react", "stage-3"],
+    "presets": [
+      "react",
+      "stage-3"
+    ],
     "env": {
-      "test": {"presets": [["env", {"targets": {"node": "current"}}]]},
-      "development": {"presets": ["env"]}
+      "test": {
+        "presets": [
+          [
+            "env",
+            {
+              "targets": {
+                "node": "current"
+              }
+            }
+          ]
+        ]
+      },
+      "development": {
+        "presets": [
+          "env"
+        ]
+      }
     }
   },
   "eslintConfig": {
